--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,3 @@
 build/libs/seoultour-0.0.1-SNAPSHOT.jar filter=lfs diff=lfs merge=lfs -text
+C:/Users/Playdata/IdeaProjects/seoultour/build/libs/seoultour-0.0.1-SNAPSHOT.jar filter=lfs diff=lfs merge=lfs -text
+build/libs/seoultour-0.0.1-SNAPSHOT.jar filter=lfs diff=lfs merge=lfs -text
